--- a/css/frameEcranApplication.css
+++ b/css/frameEcranApplication.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     justify-content: space-between;
     overflow: hidden;
+    --webkit--overflow:hidden;
     align-items: center;
 }
 .backgroundApplication {
