--- a/css/frameEcranProfil.css
+++ b/css/frameEcranProfil.css
@@ -4,7 +4,9 @@
     height:100vh;
     flex-direction: column;
     overflow-y: scroll;
+    --webkit--overflow-y:scroll;
     overflow-x: hidden;
+    --webkit--overflow-x:hidden;
     margin: 0;
     background-color: rgb(65, 62, 62);
 }
@@ -27,6 +29,7 @@
     border-radius: 180px;
     object-fit: cover;
     overflow: hidden;
+    --webkit--overflow:hidden;
     height: 159px;
     
 }
@@ -57,6 +60,7 @@
 .frame-profil-bottom{
     height: 95vh;
     overflow-y: scroll;
+    --webkit--overflow-y:scroll;
     color: black;
     
 }
