--- a/css/frameEcranStage.css
+++ b/css/frameEcranStage.css
@@ -9,6 +9,7 @@
     --webkit--overflow-x:hidden;
     margin: 0;
     background-color: blue;
+    scrollbar-width: none;
 }
 
 .card-stage{
@@ -76,6 +77,7 @@
     height: 100%;
     overflow-y: scroll;
     --webkit--overflow-y:scroll;
+    scrollbar-width: none;
     
 }
 .main{
