--- a/css/frameEcranStage.css
+++ b/css/frameEcranStage.css
@@ -48,6 +48,7 @@
 }
 .volet h1{
     font-size: 2em;
+    text-align: center;
 }
 .card-stage:hover>.volet{
     top:-45vh;
@@ -125,7 +126,7 @@
 }
 .maquette-centrale{
     margin: auto;
-    width: 95vw;
+    width: 90vw;
 }
 .container-centrale{
     height: 200px;
@@ -222,14 +223,22 @@
         display: flex;
         flex-flow: wrap;
         margin: auto;
-        width: 95vw;
-        justify-content: center;
-    }y
-    .maquette-centrale p{
-        font-size: large;
+        width: 90vw;
+        justify-content: space-around;
     }
+    .maquette-centrale p{
+        font-size: 25px;
+        text-align: center;
+    }
+    .imgvpl img:nth-child(1),.imgvpl img:nth-child(2){
+        margin: 50px 10px;
+    }
+    
     .ordi img{
         width: 100%;
+    }
+    .banner-centrale h1,.banner-lilmod h1{
+        font-size: 5.5vh;
     }
 @media screen and (max-width:350px) {
     .container-centrale{
@@ -252,6 +261,9 @@
     }
 }
 @media screen and (min-width:650px) {
+    .maquette-centrale p{
+        font-size: 50px;
+    }
     .imglilmod h4{
         margin: auto 10px;
     }
