--- a/css/frameEcranProjets.css
+++ b/css/frameEcranProjets.css
@@ -5,24 +5,27 @@
     flex-direction: column;
     overflow: hidden;
     --webkit--overflow:hidden;
-    margin: 0
+    margin: 0;
 }
 .partieTopNavigationInternet{
     width:100vw;
-    height:46px;
+    min-height:36px;
+    max-height: 36px;
     background-color: rgb(65, 65, 65);
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-
+.partieTopNavigationInternet span{
+    display: flex;
+}
 .partieTopNavigationInternet img{
     margin: 0 1px 0 4px;
     height:15px;
     cursor: pointer;
 }
 .fleche-droite,.fleche-gauche{
-    display: none;
+    display: flex;
 }
 .titleSite{
     display: flex;
@@ -68,7 +71,8 @@
         justify-content:flex-end;
         padding-right: 5vh;
         align-items: center;
-        height:5vh;
+        min-height:5vh;
+        max-height: 5vh;
         width:99vw;
         background-color: rgb(136, 135, 135);
         color: black;
@@ -100,6 +104,11 @@
 }
 .partieBottomNavigationInternet h1{
     text-align: center;
+    
+}
+.projetsMain h1{
+    font-size: xxx-large;
+    margin-bottom: -10px;
 }
 
 .projets{
@@ -111,10 +120,12 @@
     overflow-y: scroll;
     --webkit--overflow-y:scroll;
     scrollbar-width: none;
+    margin: 29px auto 0 auto;
 }
 
 .card{
     width:300px;
+    min-width: 250px;
     height:320px;
     margin: 0 10px 10px 10px;
     display: flex;
@@ -194,7 +205,7 @@
     width: 175px;
     top:24.1px;
 }
-.laFleur,.gsbJava,.gsbSymfony{
+.laFleur,.gsbJava,.gsbSymfony,.etam{
     display: none;
     flex-direction: column;
     height: 100%;
@@ -397,9 +408,16 @@
        
     }
     .croix2{
-        margin-right: 5px;
+        margin-right: 8px;
         display: flex;
-        height: 20px;
+        height: 12px;
+        background-color: #6c0202e3;
+        width: 12px;
+        border: 0.5px solid black;
+        border-radius: 6px;
+    }
+    .croix2:hover{
+        background-color:#990707 ;
     }
     .listedecontraintes{
         display: flex;
