--- a/css/general.css
+++ b/css/general.css
@@ -1,4 +1,4 @@
-@font-face {font-family: nordic;src: url(../fonts/vevey.ttf);}
+
 body{
   margin: 0;
   background-color: rgb(202, 202, 202);
@@ -14,7 +14,7 @@ body{
   position:relative;
 }
 h1{  
-    font-family: nordic;  
+  font-family: 'Courier New', Courier, monospace;
 }
 h5{
   color: black;
