--- a/css/frameEcranCV.css
+++ b/css/frameEcranCV.css
@@ -99,7 +99,7 @@
   padding-right: 8px;
 }
 .img-logo{
-  text-align: end;
+  text-align: initial;
 }
 @media only screen and (min-width: 768px) {
   .timeline:before {
