ajout des logos github et linkedin + quelques petits détails de design

--- a/css/frameEcranCV.css
+++ b/css/frameEcranCV.css
@@ -99,9 +99,13 @@
   padding-right: 8px;
 }
 .img-logo{
-  text-align: initial;
+  text-align: right;
 }
+
 @media only screen and (min-width: 768px) {
+  .img-logo{
+    text-align: initial;
+  }
   .timeline:before {
     content: "";
     position: absolute;
