--- a/css/frameEcranProfil.css
+++ b/css/frameEcranProfil.css
@@ -66,7 +66,10 @@
     width: 100vw;
     
 }
-
+.reseaux-profil img{
+    margin: auto 20px;
+    cursor: pointer;
+}
 
 @media screen and (min-width:640px) {
     .tableauInformation td{
