--- a/css/frameEcranProfil.css
+++ b/css/frameEcranProfil.css
@@ -70,6 +70,19 @@
     margin: auto 20px;
     cursor: pointer;
 }
+.croixProfil{
+        margin-right: 8px;
+        display: flex;
+        height: 12px;
+        background-color: #6c0202e3;
+        width: 12px;
+        border: 0.5px solid black;
+        border-radius: 6px;
+    
+}
+.croixProfil:hover{
+    background-color:#990707;
+}
 
 @media screen and (min-width:640px) {
     .tableauInformation td{
